--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -122,12 +122,16 @@
             </div>
         </div>
 
-        <div id="leyenda_mapa" class="p-2 m-2 bg-white text-center">
-            <img src="../images/leyenda.png" class="rounded" id="legend">
+        <div id="leyenda_mapa" class="p-2 m-2 bg-white text-center row">
+            <div class="col-12">
+                <img src="../images/leyenda.png" class="rounded" id="legend">
+            </div>
             <!-- Button trigger modal informacion -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#informacionModal">
-                ¿Cómo interpreto esto?
-            </button>
+            <div class="col-12 mt-3">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#informacionModal">
+                    ¿Cómo interpreto esto?
+                </button>
+            </div>
         </div>
         <style>
             .checkbox-lg .custom-control-label::before,
