--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -124,7 +124,7 @@
 
         <div id="leyenda_mapa" class="p-2 m-2 bg-white text-center row">
             <div class="col-12">
-                <img src="../images/leyenda.png" class="rounded" id="legend">
+                <img src="../images/leyenda.png" class="rounded w-10" id="legend">
             </div>
             <!-- Button trigger modal informacion -->
             <div class="col-12 mt-3">
